# Automate-The-Boring-Stuff-With-Rust

./: .gitignore  README.md
Arrays_2/: .gitignore  Arrays_practive_projects.md  Cargo.toml  camma_code.py  character_picture_grid.py  coin_flip_streaks.py
Functions/: collatz.py
Functions_1/: Functions_practive_projects.md  collatz  collatz.rs
chapter_6/: Cargo.toml  readme.md  table_printer.py
dictionarys_3/: Cargo.toml  chess_validator.py  fantasy_game_inventory.py
